[tool.poetry]
name = "streetdownloader"
version = "0.1.0"
description = ""
authors = ["ettoc00 <41289053+ettoc00@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.5.5.64"
python-dotenv = "^0.21.0"
aiohttp = "^3.8.3"
attrs = "^22.2.0"
cattrs = "^22.2.0"
geopy = "^2.3.0"
tqdm = "^4.64.1"
selenium = "^4.7.2"
chromedriver-autoinstaller = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
