[tool.poetry]
name = "streetdownloader"
version = "0.2.0"
description = ""
authors = ["ettoc00 <41289053+ettoc00@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.5.5.64"
python-dotenv = ">=0.21.0"
aiohttp = "^3.8.3"
attrs = ">=22.2.0"
cattrs = ">=22.2.0"
geopy = ">=2.3.0"
pillow = ">=7.0.0"
piexif = "^1.1.3"
# GUI
tqdm = ">=4.64.0"
selenium = ">=4.7.2"
chromedriver-autoinstaller = ">=0.4.0"
fake-useragent = ">=0.1.14"
matplotlib = "^3.6.0"
pyperclip = "^1.8.2"

[tool.poetry.group.dev.dependencies]
scikit-learn = "^1.2.0"
networkx = "^3.0"
hdbscan = "^0.8.29"
scipy = "^1.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
